--- a/Easy4hardware/style.css
+++ b/Easy4hardware/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(255, 255, 255);
     font-family: 'Rubik Dirt', cursive;
+    background-image: url('https://images.unsplash.com/photo-1603732551681-2e91159b9dc2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGNvbXB1dGVyJTIwcGFydHN8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
 }
 
 .logo:hover {
@@ -17,7 +18,7 @@ ul {
     border-radius: 25px;
 }
 
-@media (min-width: 680px) {
+@media (min-width: 700px) {
     .search {
         display: inline-block;
         position: absolute;
@@ -27,7 +28,7 @@ ul {
     }
 }
 
-@media (max-width: 680px) {
+@media (max-width: 700px) {
     .search {
         display: block;
         margin: 105px 2px;
